--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,32 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+@layer {
+   @font-face {
+      font-family: 'jakartaDisplayRegular';
+      src: url('../assets/fonts/PlusJakartaDisplay-Regular.ttf') format('truetype');
+   }
+   @font-face {
+      font-family: 'jakartaDisplayBold';
+      src: url('../assets/fonts/PlusJakartaDisplay-Bold.ttf') format('truetype');
+   }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+   @font-face {
+      font-family: 'jakartaTextRegular';
+      src: url('../assets/fonts/PlusJakartaText-Regular.ttf') format('truetype');
+   }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+   @font-face {
+      font-family: 'jakartaTextBold';
+      src: url('../assets/fonts/PlusJakartaText-Bold.ttf') format('truetype');
+   }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+   html {
+      scroll-behavior: smooth;
+   }
+
+   @media only screen and (max-width: 900px) {
+      * {
+         cursor: default !important;
+      }
+   }
 }
